--- a/09-17-24.md
+++ b/09-17-24.md
@@ -80,6 +80,8 @@
       - signifies beginning of the end of Bakufu's exclusive authority
       - no agreement on the right course of action
 - Perry returns in 1854, and by end of March, a treaty had been signed
+- Did not clarify status of trade
+  - Townsend Harris was later sent to Japan to clarify this
 
 ## Key Terms
 
