--- a/09-19-24.md
+++ b/09-19-24.md
@@ -1,11 +1,116 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 7 - September 19, 2024
+# Lecture 7 - September 19, 2024 - Commodore Perry and the Catfish: Popular Culture and the Turmoil of the 1850s
 
-##
+## Lecture Ourline
 
-###
+### 1. The “Black Ships” and sources of information for ordinary people
 
+- See the formation of increasingly sophisticated information networks
+- Explosion of commercial publishing (especially in cities), giving birth to a vibrant, popular
+  culture
+- Highlights text and illustrations; reject movable print, but embrace woodblock printing, allowing
+  the mixing of text and images
+- Leads to the popularization of _Kawaraban_ “broadsheets” (text + images)
+- Idea of the "Black Ship" had already been circulating in popular culture, so when Perry arrives,
+  it is not a surprise
+- At this arrival or each , there is a mass publication of broadsheets
+- False reports and bravado
+  - Americans try to impress Japanese when Perry lands w/ a minstral show
+  - Japanese response: Use sumo wrestlers when moving things into the American ships to intimidate Americans
+- People in Edo were concerned though, and many sent family/possessions away from the city
+  - Many Samurai ran around to try to arm themselves, as many were not armed after years of
+    peace/comfort
+- Feeds the sense that everything is in chaos
+- Laughter and mockery
+- Note: Lord of Ise (Abe Masahiro, leader of Bakufu) was not respected by the people and seen as
+  weak when he called for opinions on what to do about the Americans
+  - also put out a call to ordinary people to come up with ideas, and people start to petition
+    changes
+- Leads to the broadsheet manufacterers trying to get the latest news out as quickly as possible
+  (i.e. getting the latest scoop)
+
+### 2. Yoshida Shōin and the craving for knowledge
+
+- Yoshida Shōin (1830-59) — Chōshū domain
+- Born as a low ranking samurai, but is often viewed as the spiritual father of the Meiji Restoration
+- In his youth, he traveled all over Japan and is influenced by a wide range of ideas (including
+  Aizawa Seishisai) and the idea that in order to beat your enemies, you must know them
+- In keeping with that line of thought, when Perry returns for the second time, Yoshida recruits a
+  friend to try to get passage to the US on Perry’s ship (to learn about the US)
+- Letters are read by Samuel Wells Williams, so he sends them back and they are immediately arrested
+- Shoin is sent back to Choshu and placed under house arrest
+  - Sets up academy to train future leaders; ends up training many of the leaders of the Meiji
+    Restoration/Meiji Japan
+- He is eventually executed by the Bakufu (in 1859) for his role in the Sonno Joi movement
+
+### 3. Social conditions and natural disasters
+
+- In 1855, group of boys/kids play war games (with one group being the Japanese team and one being
+  the American team). American side ultimately wins. When they play the next day, the Japanese leader
+  (a 12 year old) brings a bamboo spear and kills the 14 y.o. American leader
+  - When the authorities find out, they actually promote the kid to samurai status, giving him
+    lifetime stipend
+- Commoners were not in good shape; economic conditions deteriorate as Perry arrives
+- The year after the treaties are signed, the Great Ansei Earthquake (1855) hits (epicenter at Edo
+  Bay)
+  - 7.0-8.4 on the Richter scale
+  - ~4000 people died and ~2000 injured
+  - Many people are left homeless
+  - Leads to a lot of social unrest
+- Leads to the rise of the _Namazu-e_ (catfish prints), which are satirical prints
+  - catfish were believed to be the cause of earthquakes
+  - many contained people "blaming" the catfish for their problems
 -
+
+## Key Terms:
+
+- _Kawaraban_ broadsheets
+- Black ships (_Kuro fune_)
+- Yoshida Shōin (1830-59) — Chōshū domain
+- Great Ansei Earthquake — 1855
+- Catfish prints (_Namazu-e_)
+- _Yonaoshi_ — “World renewal”
+- Cholera
+
+## Primary Sources:
+
+### “The Catfish and the Barbarian” (trans. William Steele and Robert Eskildsen)
+
+Catfish: You stupid Americans have been making fun of us Japanese for the past two or three years.
+You have come and pushed us around too much. Since you came, Edo is all too noisy. Stop this useless
+talk of trade, we don’t need it! We are sick of hearing the noisy calls of the candy sellers. We
+don’t need you, so hurry up and put your back to us. Fix your rudder and sail away at once.
+
+America: What are you talking about, you stupid catfish! Mine is a country of benevolence and
+compassion. No matter what a person does, even if he is a laborer or a hunter, if he is benevolent
+he can become king. That’s why many people want to come to my country and that’s why our country is
+called “a country that gathers in people” (gasshi koku — trans. of “United States”). But there is
+one thing which troubles us: we have too many people and not enough food to feed them. Therefore we
+have come to Japan to get rice, radishes and chickens; but you just say no, and have not given us
+anything. That’s why we keep coming back.
+
+Catfish: Shut up, Perry. No matter how often you brag that your gasshu koku is a country of
+benevolence, if you don’t have food you must be poor. If America had the Buddha or the gods then you
+would have a good harvest of the five grains. But since you don’t, you have to depend upon piracy
+and steal your food. Knowing this, the gods of our country have gathered together and have caused a
+divine wind to sink your ships and those of the Russians. For sure in the eleventh month of last
+year the gods struck out against your rudeness. I don’t want to listen to any of your empty words.
+
+America: You catfish! It is funny for you to speak like that, making up your own reasoning. Despite
+the fact that men can usually hold you down with a gourd, on the fourth day of the eleventh month
+you tried to send us away by shaking Shimazu and Numazu, but our American spirit remained unmoved.
+
+Catfish: You noisy hairy barbarian! If you don’t leave we’ll bury you in mud!
+
+America: Go ahead and try; I’ll fight back with gun and bayonet!
+
+Plasterer: Both of you be quiet. If you are far away listen carefully to my words; if you are close,
+look with your eyes and see the cracks in the warehouses. We are asked to patch up these cracks and
+holes; asked over and over again, we are asked to prop up the broken-down walls; we are known for
+our fine work with the trowel. Everyone admires our work. We are thankful this time for the
+earthquake, but both of you try to resolve your differences without causing us any trouble. We don’t
+want to see it; stop it!
