--- a/09-19-24.md
+++ b/09-19-24.md
@@ -5,7 +5,7 @@
 
 # Lecture 7 - September 19, 2024 - Commodore Perry and the Catfish: Popular Culture and the Turmoil of the 1850s
 
-## Lecture Ourline
+## Lecture Outline
 
 ### 1. The “Black Ships” and sources of information for ordinary people
 
@@ -64,7 +64,18 @@
 - Leads to the rise of the _Namazu-e_ (catfish prints), which are satirical prints
   - catfish were believed to be the cause of earthquakes
   - many contained people "blaming" the catfish for their problems
--
+- US is seen as a country that people want to come to (immigration) and that anybody can be "king"
+  (President)
+  - But if they have so much over there, why are they coming to us for food?
+  - Indicative of level of sophistication of literacy, commerical development, and circulation of
+    information
+- In 1856, Edo is hit by freak winds/rain (similar to Typhoon) that floods most of the city
+- From 1857, there is a series of epidemics/pandemics, including cholera (likely brought by American
+  trade ships through Nagasaki)
+  - conservative estimates at 100,000 people dead in Edo alone
+  - Leads to the rise of the _Yonaoshi_ (world renewal) movement
+    - People believe that the world is coming to an end, so they need to do something to renew it
+    - Leads to a lot of social unrest
 
 ## Key Terms:
 
