--- a/09-24-24.md
+++ b/09-24-24.md
@@ -2,10 +2,104 @@
 
 [//]: <> (use `gqap` to force wrap text)
 
-# Lecture 8 - September 24, 2024
+[//]: <> (use `:noa w` to save without autoformatting)
 
-##
+# Lecture 8 - September 24, 2024 - "Rever the Emperor! Expel the Barbarian"
 
-###
+## Lecture Outline
 
--
+### 1. The Sakuradamon Incident (March 1860)
+
+- Samurai from the Mito and Satsuma domains attacked Ii's Palanquin and killed him
+
+### 2. Daimyo division over the Perry treaty
+
+- 1854: Abe Masahiro and the decision to survey Daimyo opinion to determine response to Perry
+  - differing response from daimyo's forces him to not "listen" to one group of powerful daimyo &
+    forced to resign over handling;
+- Tokugawa Nariaki and allies opposed to treaty, Nariaki urges war
+- Ii Naosuke urges development of international trade
+
+### 3. The Issue of Shogunal Succession
+
+- 13th Shogun, Tokugawa Iesada sickly and weak
+- In 1857, issue of his succession becomes increasing meaningful
+- Division over who should succeed him
+- Obvious successor = Tokugawa Yoshitomi (Daimyo of Kii), who was supported by Ii Naosuke and the Vassal Daimyo
+  - issue was that he was still a child
+  - vassal daimyo: families who were loyal Tokugawa during the war are the ones who really serve
+    in the positions of power/running things in the bakufu. wanted a child in power so they don't
+    have strong opposition in the form of a grown up shogun
+- Tokugawa Nariaka and allies support Tokugawa Keiki of Hitotsubashi
+  - The Hitotsubashi Party
+  - Satsuma was seen as an "enemy daimyo"
+    - Didn't join tokugawa in the warring states period, but were too big/important to crush
+  - Tokugawa Nariaki (Mito) and Matsudaira Keiei (Fukui) were related to the Tokugawa
+  - important: these men were excluded from the bakufu power/running the government
+    - either excluded b/c they were seen as the enemy or were "too prestigious"
+  - Tokugawa Keiki was the son of Tokugawa Nariaki, but adopted by Hitotsubashi family (to continue
+    their male daimyo line)
+
+### 4. The Issue of a Commercial Treaty (Townsend Harris)
+
+- Hotta Masayoshi - tries to get approval of the Emperor
+  - Hotta is the one who succeeds Abe Masahiro after he steps down
+- The Emperor's compromise = voice disapproval of the treaty, but also refuse to support Keiki for
+  shogun
+  - frustrates everyone, especially Hotta, who spends his life trying to get the emperor's support
+    but is told his treaty is a stain on Japan
+  - forced to resign, and is replaced by Ii Naosuke
+
+### 5. Resolution? Ii Naosuke as Regent
+
+- His family is one of the most prestigious of all of the vassal daimyo
+- Armies that he provided to the Tokugawa were known as the red devils (strong military force)
+- has the child appointed as shogun, and himself appointed as regent
+- then, approves commericial treaty with the US
+- carries out ruthless purge of his critics (Onse purge), and targets Tokugawa, Nariaki (house
+  arrest), Tokugawa Keiki (banned from Edo castle), some other daimyo are forced to retire, and
+  lower level politicians are killed/forced to retire
+- angers many in the Mito domain and across Japan, as they see it as disrespect to their daimyos
+- upsets many b/c of the treaty with the Americans
+- reaction is to try to bind the Tokugawa family and the imperial family closer together
+
+### 6. Reaction: The Rise of the Political Violence
+
+- assassination of Ii ushers in period of intense political violence
+  - example of killing Ii leading to successful change sets precedent
+- The "Men of Spirit" (_shishi_)
+  - young, ambitious, often idealistic
+  - Terrorists or Patriots?
+  - Foreign traders eventually became targets as well
+  - Townsend's secretary, Henry Heusken, is killed in Edo
+  -
+
+## Key Terms
+
+Ii Naosuke (1815-60) - Daimyo of Hikone, appointed Regent (Tairo) to shogun in 1858
+Tokugawa Iesada (1824-58) - 13th Shofun (reigns from 1853-58)
+Succession dispute between:
+
+- Yoshitomi (Daimyo of Kii) (1846-66)
+- Keiki (Daimyo of Hitotsubashi) (1837-1913) (seventh son of Tokugawa Nariaki)
+  Eventually won by Yoshitomi who succeeds Iesada to become the 14th shogun, taking the name Tokugawa
+  Iemochi (reigns from 1858-66)
+
+The Hitotsubashi Party - led by Nariaki, also includes Shimazu Nariaki (Satsuma) and Matsudaira
+Keiei (Fukui)
+
+Hotta Masayoshi (1810-64) - succeeds Abe Masahiro as head of the Senior Council in 1855
+
+Townsend Harris (1804-78) US Consul
+
+Ansei Purge (1858-59)
+
+Yoshida Shoin (1830-59)
+
+"Men of Spirit" (_shishi_)
+
+"Revere the Emperor! Expel the Barbarian" (_Sonno joi_)
+
+Baku-matsu = end of the Bakufu (i.e. the 1850s and the 60s)
+
+Henry Heusken (1832-61) - Interpreter for Townsend Harris
