--- a/09-26-24.md
+++ b/09-26-24.md
@@ -1,11 +1,139 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 9 - September 26, 2024
+# Lecture 9 - September 26, 2024 - Thought and Action in the Bakumatsu Years
 
-##
+## Lecture Outline
 
-###
+### 1. The Intellectual Milieu of the Late Tokugawa Period
 
--
+- The Mito School – Vocabulary and Framework
+
+  - "revere the emperor, expel the barbarian"
+  - Aizawa Seishisai (1782-1863)
+  - Mito school argues talks about a "reinvigoration of the Tokugawa system"
+    - when domains (such as Mito) build their own navies, and get more power, they can help the
+      shogun and the emperor
+
+- Tokugawa Nativism/National Learning ( = Kokugaku)
+
+  - Begins as a literary movement, focused on reading ancient japanese texts
+  - Motoori Norinaga (1730-1801)
+    - first person to believe that the national spirit of Japan had been corrupted/lost due to the
+      importation of Chinese/foreign culture
+    - believed that the Japanese should return to antiquity, when Japan had a healthier/more
+      wholesome society, when the gods/nature were connected to the people through a more active
+      emperor
+    - remember, line of emperors was unbroken, unlike in China/other countries
+      - used as jsutification for the emperor to have more power
+  - sense of unease among the wealthy Japanese, and the allue of the times in antiquity when
+    everyone lived in peace was strong
+  - Hirata Atsutane (1776-1843)
+    - spread the ideas of Norinaga/other kokugaku scholars
+    - turns these concepts into a political movement
+    - when the different schools of though, the Mito school and the kokugaku school, come together,
+      they form a powerful force that can be used to challenge the bakufu
+      - meaning of "Revere the Emperor, Expel the Barbarian" changes from "reinvigorate the
+        Tokugawa system" to "restore antiquity/restore the ancient system of imperial rule" as the
+        emperor was that link
+      - "expel the barbarian" = get rid of the foreigners, who are corrupting the Japanese spirit
+
+- From “Reinvigorating” the Tokugawa System to “Restoring Antiquity/Restoration of the Ancient
+  System of Imperial Rule”
+
+### 2. The Bakufu Response to the “Men of Spirit”
+
+- After the assassination of Ii Naosuke in 1860, Bakufu policy shifts to a more conciliatory stance
+  with the Mito/Tokugawa Nativist schools of thought
+- “Unifying the Court and the Bakufu”
+  - Marriage of Shōgun Iemochi and Princess Kazunomiya (sister of the emperor) in 1861 (after
+    assassinaton of Ii Naosuke)
+    - intended to make it clear that that the bakufu and the court were working together
+    - emperor was originally reluctant, but was eventually convinced
+  - Renegotiate with the Western powers to secure delay of opening of additional treaty ports
+    - sends a group of high ranking delegates to the west, convinced western powers to delay the
+      opening of the treaty ports until 1868 was seen as a success for the bakufu in holding its own
+      authority
+  - Note: Tokugawa Nariaki also dies in 1860. and the death of Ii and Nariaki leads to a power vacuum
+    in the bakufu
+    - first threat to power came from the Choshu domain
+
+### 3. The Great Domains and the Bakufu
+
+- daimyo of choshu did not go to battle with the tokugawa forces in the warring states period, but were too powerful to crush, so were excluded from the bakufu
+- Chōshū plan to mediate between the Bakufu and Court
+
+  - court originally shows interest in the choshu plan, but just as things are going well, the
+    Satsuma domain marches on Kyoto with 1000 of his men (without prior Bakufu approval)
+
+    - Satsuma under Shimazu Hisamitsu (1817-1887) (father of the daimyo of Satsuma)
+
+  - catches the bakufu leaders by surprise, and when he gets to Kyoto, suggests that the court
+    should be even stronger in their demands, and to get more from the Bakufu
+  - tells bakufu that the only way to get out of this mess was the put the Hitotsubashi party in power
+  - this is the first time that the bakufu is seen as weak, and the daimyo are seen as strong
+  - bakufu is forced to ease up on the "alternate attendance" requirements for the daimyo
+  - every daimyo is allowed to invest in his own armies/navies
+  - Matsudaira Keiei does also make the Bakufu stronger, but also the daimyo stronger
+  - ends up alienating the traditional bakufu supporters
+
+### 4. Satsuma in the early 1860s
+
+- The Teradaya Inn Incident – Satsuma and the “Men of Spirit”
+  - Ōkubo Toshimichi and Saigō Takamori
+  - forces the more radical people from Satsuma into line
+  - convinces the loyalists that there is not point to work independently in the domain, but
+    through it
+  - results in Satsuma becoming a tight political unit, with Okubo and Saigo leading the men of
+    spirit to work in the domain's best interest under Shimazu
+- The Namamugi Incident and the British Bombardment of Kagoshima
+  - British merchant is killed by Satsuma samurai, and the British demand compensation from the
+    Bakufu; Bakufu demands compensation from Satsuma
+  - Satsuma refuses, so after a year attempted to negotiate the British bombard Kagoshima (Satsuma
+    capital)
+  - Satsuma is forced to pay the British, and the British leave
+  - Satsuma is seen as a powerful domain, and the bakufu is seen as weak
+    - "at least were standing up to these barbarians"
+  - but due to cost, Satsuma is forced to withdraw their contribution to politics/Kyoto
+    - men of spirit see this as their chance
+
+### 5. The Radicalization of Chōshū
+
+- Chōshū and the “Men of Spirit”
+  - Tokugawa Keiki and the call to “Expel the Barbarian”
+  - alliance comes to dominate the emperor's capital of Kyoto
+  - start pushing the idea that the bakufu actually do something
+- new 26-year old shogun, Tokugawa Yoshinobu, is seen as weak, and the bakufu is seen as weak
+  - hard to balance the bakufu and the daimyo/emperor
+  - sets bait
+    - Attacking Western shipping from Shimonoseki
+    - Choshu domain attacks western ships, and the bakufu sees Choshu's actions as outward
+      insurrection
+    - Sends other daimyo to expel the Men of Spirit in the capital
+  - Domains face serious problems
+    - Mito decends into civil war, basically removing it as a political force
+    - Choshu being expelled marks the end of the "expel the barbarian" movement
+    - allies bombard Shimonoseki (in Choshu)
+  - The Bakufu Response – Aizu and Satsuma in Kyoto
+    - many important leaders in Kyoto die in 1864
+  - The Western Response – Allied Military Action
+
+## Key Terms
+
+- Kokugaku (Nativism)
+- Motoori Norinaga (1730-1801)
+- Hirata Atsutane (1776-1843)
+- Tokugawa Iemochi (1846-66) (Formerly Yoshitomi, Daimyō of Kii)
+- (Princess) Kazunomiya (1847-77)
+- Shimazu Hisamitsu (1817-87)
+- Tokugawa Keiki (1837-1913) (Also known as Yoshinobu)
+- Matsudaira Keiei (1828-90) (Daimyō of Fukui; Also known as Shungaku and Yoshinaga)
+- Teradaya Inn Incident
+- ŌKUBO Toshimichi (1830-1878)
+- SAIGŌ Takamori (1828-1877)
+- Namamugi Incident
+- Kagoshima (Capital of Satsuma)
+- Shimonoseki
+- Aizu Domain
