--- a/10-01-24.md
+++ b/10-01-24.md
@@ -1,11 +1,138 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 10 - October 1, 2024
+# Lecture 10 - October 1, 2024 - The Meiji Restoration
 
-##
+## Lecture Outline
 
-###
+### 1. The “Men of Spirit” and the Idea of Restoration
 
--
+- “Restoration of the Ancient System of Imperial Rule”
+- Rather than work with the status quo, the men of spiriti came to believe it was necessary to
+  completely get rid of the bakufu and restore the emperor to power (wihtout the aide of the warrior
+  governemmt)
+- In 1864, important to note that the men of spirit were not in a position to overthrow the Tokugawa
+- Meanwhile, Choshu (southwest domain) which provided these radicals their strongest support, seemed to be
+  facing disaster from the Western bombardment
+- Bakufu decides that Choshu must be punished (Chastise Choshu), so armies from 34 domains are sent
+  to Choshu.
+
+### 2. Whither Chōshū?
+
+- The Bakufu’s campaign to “Chastise Chōshū!”
+- But somehow in only 4 years, Choshu gains massive power and is in the position to change the
+  goernemnt to put the emperor back in power
+- first step: bakufu calls off invasion of Choshu b/c conservatives within Choshu issue formal
+  apology and agree to purge the radicals who were behind this
+- But very soon after, the radicals make a comeback, and are able to reassert their control in
+  Choshu
+
+  - Key figure: Kido Koin (1833-77)
+    - Mid-ranking samurai
+    - Very sympathetic to the radicals and sees this as an opportunity for Choshu to assert
+      itself on a national stage
+    - Choshu "Kihetai" (Irregular Militia)
+      - recruited from all parts of society, not just the
+        samurai class
+      - very open to using Western military tactics/technology
+      - initially seems ironic b/c these are the "expel the barbarian" people, but recall Yoshida
+        Shoin, who was convinced that the only way to expel the barbarian was to learn from them
+        - Shoin taught other Choshu samurai like Kido Koin
+
+- Western bombardment of Shimonoseki (in Choshu) demonstrates that the Choshu have much to learn,
+  leading to acceptance of the need to enact bold new measures for its own strength
+
+### 3. The Satsuma-Chōshū (Sat-Chō) Alliance
+
+- Choshu looked for allies and found one in Satsuma (southwestern most domain)
+
+  - both historical enemies of the Tokugawa bakufu but both have good reason to be enemies
+  - Satsuma has been the domain that has always upstaged Choshu when Choshu that tried to make a
+    name for itself and are also the ones who encourage the bakufu to get rid of the radicals in
+    Choshu
+
+- Shifting to the Tosa domain, (in the early 1860s) the radical ideas of the important of the
+  imperial family had also taken hold
+  - Men of spirit try to get power, but are eventually pushed out and forced to move elsewhere.
+    - One of those in exile was Sakamoto Ryoma (1835-67)
+      - Initially known for being an excellent swordsman, but eventually becomes a very important
+        figure in the Meiji Restoration
+      - towards end of 1862, as he is forced to move out, he decides to make a name for himself by
+        assassinating someone (Katsu Kaishu)
+- Katsu Kaishū and the Bakufu Navy
+  - Katsu Kaishu gets ahead by starting with Dutch studies, which contributes to his rise within the
+    bakufu
+  - Katsu Kaishu gets put in change of the first Japanese steam ship, and after he returns, he is
+    put in change of building up the bakufu's navy
+  - But when Sakamoto Ryoma tries to kill him, Katsu Kaishu presents how japan is on the verge of
+    falling to the Western powers, and the only way to survive is to build up their military strenth
+    as quickly as possible, especially the navy. ends up recruiting Sakamoto Ryoma to work for him
+  - goes well until 1864, when the the change in the bakufu leadership leads to Katsu Kaishu losing
+    his job
+  - Sakamoto Ryoma arranges for some of his buddies in Satsuma to taken Katsu Kaishu in, and he
+    becomes a very important figure in the Satsuma-Choshu alliance
+- Satsuma and Choshu don't directly talk, but the Tosa people that moved there created a network of
+  communication and eventually leads to a secret alliance
+- Comes at a horrible time for the bakufu
+  - “Chastise Chōshū” (Take two)
+  - but not, Satsuma has a secret alliance with Choshu, and decides not to fight against Choshu.
+  - other domains arent keen in fighting Choshu, so the new coallition assembled is a lot weaker &
+    the troops are less motivated. meanwhile, Choshu has been building up their military strength, so
+    when Bakufu forces arrive, they are routed by the Choshu forces
+  - but around this time, the Shogun dies, so the bakufu forces retreat (but everybody knows that
+    they were defeated)
+
+### 4. Towards Restoration!
+
+- Ee ja nai ka? (What the heck? Let's just party!)
+  - people start dancing throughout the streets
+  - feeds into the sense of chaos and that the bakufu is losing control
+- Leads to another change in the Bakufu leadership, when Tokugawa Keiki (some of Tokugawa Nariaki) becomes Shogun
+  - immediately starts pushing for reforms, but ends up alienating the traditional bakufu supporters
+    and is a case of too little, too late from the radicals
+  - Keiki asks the French for military support
+  - meanwhile, Choshu and Satsuma are getting closer to the British
+- French v. British? Towards Partition?
+  - Iwakura Tomomi (1825-83) of the imperial court, starts to make calls from within the court for
+    imperial restoration
+    - Note: the recent emperor just died and was replaced by a 15-year-old emperor (who was easily
+      manipulated by the court)
+- Sakamoto Ryoma suggests a new government that would be a coalition of the daimyo and the court
+  - 1.
+  - 2. have a bicamerel legislature (bakufu represented in upper house and men of spirit in the
+       lower house)
+  - 3. have a japanese army/navy be built up
+
+### 5. The Fall of the Bakufu
+
+- The Sat-Chō coup (allied with Tosa + )
+
+- Keiki’s resigns, becoming the last shogun in November 1867 and relinquishes the rights of any of
+  his descendants to the shogunate
+  - not enough in the radicals' eyes, so they secure custody of the boy emperor and issue an edict
+    that the Tokugawa families give up all of their land/holdings
+  - Tokugawa refuses, so imperial forces meet the Tokugawa forces and are routed
+  - important to note is that the Tokugawa received very little support from the other daimyo
+- Sat-cho target Aizu b/c in 1864 Aizu helped clean up radicals in Choshu: Chastise Aizu!
+  - but scale of fighting across the country was limited
+  - due to Tokugawa Keiki recognizing that a full scale civil war was not good for anyone
+- When imperial forces arrive at Edo, Keiki decides to put Katsu Kaishu in charge of the Bakufu
+  forces, agreeing that the bakufu forces/Edo will surrender peacefully
+- relatively peaceful transition of power, and emperor was restored to his ancient position of power
+
+## Key Terms
+
+- “Restoration of the Ancient System of Imperial Rule” (Ōsei fukko)
+- “Chastise Chōshū”
+- **KIDO Kōin (Takayoshi)** (1833-77)
+- Tosa domain
+- **SAKAMOTO Ryōma** (1835-67)
+- **KATSU Kaishū** (Rintarō) (1823-99)
+- _Ee ja nai ka!_ (Ain’t it great? Why the hec not?)
+- **TOKUGAWA Keiki** (or Yoshinobu) appointed shogun after the death of Iemochi in 1866
+- **IWAKURA Tomomi** (1825-83)
+- **SAIGŌ Takamori** (1828-77)
+- **Boshin War** – Civil War (Jan 1868 – May 1869)
+- Aizu domain
