--- a/10-03-24.md
+++ b/10-03-24.md
@@ -1,11 +1,116 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 11 - October 3, 2024
+# Lecture 11 - October 3, 2024 - Monarchy and Oligarchy: Consolidating the New National Leadership
 
-##
+## Lecture Outline
 
-###
+### 1. **Meiji – an era of “Enlightened Rule”?**
 
--
+- The Charter Oath
+- “An Illuminating Historical Context”?
+
+### 2. **The Oligarchs**
+
+- Iwakura Tomomi – court noble
+  - high ranking court noble, but sympathetic to the radicals
+  - as a result, was exiled from the court, but returned to Kyoto in 1867
+  - had close ties to satsuma
+  - organizes group of nobles to support the radicals, including Sanjo Sanetomi (1837-91), who had close ties
+    to choshu
+  - wins over the boy-emperor's materal grandfather, who is the most powerful person in the court,
+    and gets direct access to the emperor
+  - Beginning of 1867, Iwakura confronts some powerful lords with the emperor's decree
+  - important to note: Choshu is not actively involved in this yet and not all the domains involved
+    in the restoration were hostile to the Tokugawa
+  - Tosa + Echizen actively promoted some kind of compromise
+    - they want a great council of lords, which would include Tokugawa Keiki, the last shogun
+    - but Satsuma is strongly against this. they want to get rid of the bakufu
+- Ōkubo Toshimichi and Saigō Takamori (Satsuma)
+  - Okubo insists the only way to fully get rid of the bakufu was to strip Tokugawa Keiki of his
+    land and titles
+    - leads to battle, where 10,000 bakufu troops are defeated by 4000 Satsuma and Choshu troops
+  - Saigo worked closely with Okubo to exclude the Tokugawa when establishing a new regime
+    - ends up securing the successful handover of Edo to imperial forces
+    - mainly a battlefield commander
+- Kido Kōin (Chōshū)
+  - Okubo and Kido are the two most important figures in the new government
+- These three men consistute the first generation of Meiji oligarchs
+  - Obuko and Saigo recognize that sucuring western recognition of the new government would be
+    important
+  - encourage emperor to allow audiences with foreign diplomats
+- However, there were a number of court nobles, led by the emperor's grandfather, who thought that
+  they should be in power. wanted a real monarchy, not an oligarchy and wanted a stronger stance
+  towards the Western powers
+  - at the same time, some Daimyo (led by the lords of Tosa and \_\_) wanted a council of lords
+  - accussed the 3 oligarchs of using the emperor as a puppet to seize power for themselves
+
+### 3. **The question of legitimacy and the power of “state ritual”**
+
+- The Charter Oath in context
+
+  - Jimmu, the first emperor, gained a resurgence in worship
+  - formal ceremony (recall lecture) marked first time where emperor had been seen in public in
+    centuries and not just as a passive symbol, but as someone who was issuing orders
+  - Okubo demanded (and got) the emperor to appear before the people, to move them to tears and
+    shock them to silence with a single command
+  - Okubu and Kido designed this ceremony to quell any doubts about the legitimacy of the new
+    government, Tokugawa Keiki not having an role in the new government, and the emperor's
+    grandfather and his court supporters not having any power regarding the emperor
+
+- Answers to “the Four Questions”
+  - Kido Koin was the key figure in writing the Charter Oath
+  - written to any people that might challenge their power
+  - written to establish the emperor's legitimacy and consolidate the power of the oligarchy by
+    using the image of the emperor
+  - Once its issued, it began to take a like of its own
+  -
+
+### 4. **The Role of the Monarch**
+
+- Symbol of a new era – Western clothes
+  - by 1871, the emperor was wearing western clothes similar to western monarchs
+  - his advisors also start wearing western clothes
+- The new “Eastern Capital” = Tōkyō
+
+  - plans a series of grand trips across the country, and that the emperor needs a new capital
+    - keen on Osaka, but is rejected fairly quickly as most of the resistance to the new government
+      was in the northeastern part of the country
+    - eventually settles on Edo, which is renamed Tokyo
+    - Kyoto would be renamed to Saikyo (eastern capital)
+  - emperor makes first trip to Tokyo in 1868 but is not impressed by the city
+    - partly due to alternate attendence being relaxed, resulting in a drop of ~100,000 people in
+      the city
+    - economic conditions also led to people moving out of the city (think about Detroit and people
+      leaving)
+    - city was mostly peacefully surrendered
+    - large Tokugawa shrine was burned down though
+
+- Popular views of the Emperor in 1868
+  - irreverence towards the emperor was wide spread
+  -
+
+## Terms
+
+- **The Charter Oath (1868)**
+- **Iwakura Tomomi (1825-83)** (Court noble)
+- **Sanjō Sanetomi (1837-91)** (Court noble)
+- **Ōkubo Toshimichi (1830-78)** (Satsuma)
+- **Saigō Takamori (1827-77)** (Satsuma)
+- **Kido Kōin (1833-77)** (Chōshū)
+
+---
+
+### The Charter Oath of April 1868
+
+By this oath, we set up as our aim the establishment of the national weal on a broad basis and the framing of a constitution and laws.
+
+1. Deliberative assemblies shall be widely established and all matters decided by public discussion.
+2. All classes, high and low, shall unite in vigorously carrying out the administration of affairs of state.
+3. The common people, no less than the civil and military officials, shall each be allowed to pursue his own calling so that there may be no discontent.
+4. Evil customs of the past shall be broken off and everything based upon the just laws of Nature.
+5. Knowledge shall be sought throughout the world so as to strengthen the foundations of imperial rule.
+
+(From _Sources of Japanese Tradition_, Vol. II, pp. 136-7)
